# hypercore-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Justfile  README.md
.claude/: settings.json
crates/autobase/: Cargo.toml
crates/autobase/src/: lib.rs  linearizer.rs
crates/autobase/tests/: convergence.rs  quorum.rs  topolist.rs  view.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/hyperbee/: Cargo.toml
crates/hyperbee/src/: btree.rs  lib.rs  tests.rs
crates/hypercore/: Cargo.toml
crates/hypercore/src/: core.rs  lib.rs  manifest_core.rs  opfs_browser_tests.rs  replica.rs  snapshot.rs  stream.rs  tests.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  manifest.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: flat.rs  lib.rs  proof.rs  tests.rs  tree.rs
crates/roomnet/: Cargo.toml
crates/roomnet/examples/: chat_room.rs  local_board.rs
crates/roomnet/src/: config.rs  entry.rs  lib.rs  projection.rs  room.rs  server.rs  store.rs  sync.rs  testkit.rs  tests.rs  transport.rs  wire.rs
crates/roomnet/src/native/: mod.rs
crates/roomnet/tests/: converge.rs  resume.rs
crates/storage/: Cargo.toml  webdriver.json
crates/storage/src/: bitfield.rs  lib.rs  log.rs  opfs.rs  tee.rs
docs/: DECISIONS.md  DEFINITION_OF_DONE.md  FEATURE_MATRIX.md  LESSONS.md  PORTING_LOG.md  ROOMNET_SPEC.md  UPSTREAM_TEST_MAP.md
scripts/: iterate.sh  node-sandbox.sh
