[package]
name = "roomnet"
version.workspace = true
edition.workspace = true
repository.workspace = true

# roomnet — a pluggable, sans-IO room-replication layer over the L1 substrate.
# The `Room` unit (autobase-ordered multiwriter log + rolling projections) is
# wasm-clean: no async, no I/O, no transport. Environment differences live behind
# three seams — Transport, StoreFactory/Store, ProjectionSink. The real Iroh
# transport + tokio driver are gated behind `iroh` (follow-on); the default build
# is portable and drives rooms synchronously (tests, browser).
[dependencies]
codec = { path = "../codec" }
merkle = { path = "../merkle" }
identity = { path = "../identity" }
storage = { path = "../storage" }
hypercore = { path = "../hypercore" }
autobase = { path = "../autobase" }

# Native Iroh transport + tokio driver. Optional so the default build stays
# wasm-clean + lightweight. iroh 1.x pins its own crypto tree, so no manual crypto
# pins are needed. NOTE: the `iroh` feature requires rustc >= 1.91 (iroh 1.x MSRV);
# the default build has no such requirement.
iroh = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[features]
default = []
# Real network transport (Iroh QUIC) + tokio driver.
iroh = ["dep:iroh", "dep:tokio"]

[[example]]
name = "chat_room"
required-features = ["iroh"]
